初めての投稿修正

--- a/_posts/2019-12-27-初めての投稿.md
+++ b/_posts/2019-12-27-初めての投稿.md
@@ -4,7 +4,7 @@ date: 2019-12-27 00:10:26
 tags: 日記
 ---
 
-![Desktop Preview](asset/images/diary.jpg)
+![Desktop Preview]({{site.baseurl}}/asset/images/diary.jpg)
 
 はじめての投稿です。こんばんはkoujiです。
 
