初めての投稿修正3

--- a/_posts/2019-12-27-初めての投稿.md
+++ b/_posts/2019-12-27-初めての投稿.md
@@ -4,7 +4,7 @@ date: 2019-12-27 00:10:26
 tags: 日記
 ---
 
-![Desktop Preview]({{site.baseurl}}/assets/images/diary.jpg)
+![Desktop Preview](https://kouji0224.github.io/explorer/assets/images/diary.jpg)
 
 はじめての投稿です。こんばんはkoujiです。
 
