初めての投稿修正5

--- a/_posts/2019-12-27-初めての投稿.md
+++ b/_posts/2019-12-27-初めての投稿.md
@@ -4,6 +4,8 @@ date: 2019-12-27 00:10:26
 tags: 日記
 ---
 
+![キャプション](https://kouji0224.github.io/explorer/assets/images/diary.jpg)
+
 はじめての投稿です。こんばんはkoujiです。
 
 Rubyでブログ作れないかなーとなんとなくググってみたらjeykllってのがあったので何となく見様見真似で作ってみましたよ。腰も痛いのでちょっと疲れたけど、いい感じかも。サクサクだね。
