--- a/_posts/2019-12-28-Ruby2.7.md
+++ b/_posts/2019-12-28-Ruby2.7.md
@@ -6,7 +6,7 @@ tags: Ruby
 
 ![キャプション](https://kouji0224.github.io/jekyll/assets/images/ruby2.7.png)
 
-## 1.rbenvとruby-buildのアップデート
+### rbenvとruby-buildのアップデート
 
 rbenv
 
@@ -22,22 +22,29 @@ $ cd ~/.rbenv/plugins/ruby-build
 $ git pull
 ```
 
-## 2.インストールできるRubyのバージョン確認
+
+### インストールできるRubyのバージョン確認
+
 
 ```
 $ rbenv install -l
 ```
 
-## 3.Ruby2.7のインストール
+
+### Ruby2.7のインストール
+
 
 ```
 $ rbenv install 2.7.0
 ```
 
-## 4.Rubyのバージョン切り替え
+
+### Rubyのバージョン切り替え
+
 
 ```
 $ rbenv global 2.7.0
 ```
+
 
 これでOK！簡単だぜ！
